--- a/doc/tkiz/ui-kennlinie.tex
+++ b/doc/tkiz/ui-kennlinie.tex
@@ -11,9 +11,9 @@
 			xlabel={$U_{DS}$ [V]},
 			ylabel={$I_{DS}$ [mA]},
 			xmin=0, xmax=5,
-			ymin=0, ymax=1,
+			ymin=0, ymax=2,
 			xtick={0,1,...,5},
-			ytick={0,0.1,...,1},
+			ytick={0,0.2,...,2.0},
 			domain=0:5,
 			samples=200,
 			smooth,
@@ -24,26 +24,27 @@
 			
 			% Durchgehende rote Linie für IDS
 			\addplot[red, thick, domain=0:5] {
-				x < 0.2 
-				? 1.25 * x^2
-				: (x < 1.0 
-				? 1*(2 - 1)*x - 0.5*x^2 
-				: 0.5)
+				x < 0.202 
+				? 0
+				: (x < 1.81 
+				? 1*(2 - 0.2)*x - 0.5*x^2 
+				: 1.62)
 			};
 			\addlegendentry{$I_{DS}$ für $U_{GS} = 2\,\mathrm{V}$}
 			
 			% Vertikale gestrichelte Linie bei U_DS = 1V
-			\addplot[dashed, gray, domain=0:0.5] coordinates {(1,0) (1,0.5)};
-			\node[anchor=west, font=\small] at (axis cs:1.05,0.48) {$U_{DS,sat}$};
+			\addplot[dashed, cyan, domain=0:1.62] coordinates {(1.8,0) (1.8,1.62)};
+			\node[anchor=west] at (axis cs:1.55,1.7) {$U_{DS,sat}$};
 			
 			% Bereichsbeschriftungen
 			% \node[anchor=west, font=\small] at (axis cs:0.05,0.05) {Sperrbereich};
-			\node[anchor=west, font=\small] at (axis cs:0.3,0.25) {Triodenbereich};
-			\node[anchor=west, font=\small] at (axis cs:2,0.55) {Sättigungsbereich};
+			\node[anchor=west, font=\small] at (axis cs:0.55,0.7) {Triodenbereich};
+			\node[anchor=west, font=\small] at (axis cs:2,0.7) {Sättigungsbereich};
 			
 			% Vertikale gestrichelte Linie bei U_TH = 0.2V
-			\addplot[dashed, gray, domain=0:0.15] coordinates {(0.2,0) (0.2,0.15)};
-			\node[anchor=north west, gray] at (axis cs:0.22,0.09) {$U_{TH}$};
+			
+			% \addplot[solid, black, domain=0:0.15] coordinates {(0.2,-0.05) (0.2,0.05)};
+			\node[anchor=north west, black] at (axis cs:0.22,0.18) {$U_{TH}$};
 			
 		\end{axis}
 	\end{tikzpicture}
